--- a/skins/tube.css
+++ b/skins/tube.css
@@ -21,8 +21,9 @@ Version 2.0.0
 
 /* Placement of Control Items */
 .tube-css .vjs-controls > div.vjs-play-control       { width: 25px; left: 0; }
-.tube-css .vjs-controls > div.vjs-progress-control   { left: 102px; right: 83px; }
+.tube-css .vjs-controls > div.vjs-progress-control   { left: 102px; right: 109px; }
 .tube-css .vjs-controls > div.vjs-time-control       { width: 75px; left: 27px; }
+.tube-css .vjs-controls > div.vjs-mute-control       { right: 82px; }
 .tube-css .vjs-controls > div.vjs-volume-control     { width: 50px; right: 30px; }
 .tube-css .vjs-controls > div.vjs-fullscreen-control { width: 30px; right: 0; }
 
@@ -57,6 +58,13 @@ Version 2.0.0
 .tube-css .vjs-progress-control .vjs-load-progress { background: #C89191; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; }
 .tube-css .vjs-progress-control .vjs-play-progress { background: #f33; background: -webkit-gradient(linear, left top, left bottom, from(#f33), to(#CF1A1A)); background: -moz-linear-gradient(top,  #f33,  #CF1A1A); -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; }
 
+/* Volume Mute
+-------------------------------------------------------------------------------- */
+.tube-css .vjs-mute-control > div { top: 4px; left: 4px; }
+.tube-css .vjs-mute-control div div:nth-child(1) span:nth-child(1){ background: #333;}
+.tube-css .vjs-mute-control div div:nth-child(1) span:nth-child(2){ border-right-color: #333; }
+.tube-css .vjs-mute-control div div:nth-child(2) span { border-color: #333; }
+  
 /* Volume
 -------------------------------------------------------------------------------- */
 .tube-css .vjs-volume-control div { padding: 3px 0 0 0; }
