--- a/compare/compare.css
+++ b/compare/compare.css
@@ -1,6 +1,7 @@
-body { font-size: 11px; font-family: 'Helvetica Neue', helvetica, arial; }
+body { background-color: #ccc; font-size: 11px; font-family: 'Helvetica Neue', helvetica, arial; }
+#main { width: 1000px; margin: 10px auto 0; }
 td, th { text-align: left; vertical-align: top; }
 td.info-col { width: 240px; }
-td.data {  text-align: right; }
+td.data { text-align: right; }
 span.na { color: red; }
 span.undefined { color: #999; }
