--- a/design/video-js.css
+++ b/design/video-js.css
@@ -51,6 +51,15 @@ body.vjs-full-window {
   position: relative; width: 100%; max-height: 100%;
 }
 
+/* Modification By John A. Baena (JAB) */
+/* Control Bar Style 
+================================================================================
+Hide the native control bar if using the Youtube player and ytcontrols is set to true so that the native control bar
+doesn't compete with Youtube's control bar.
+*/
+.vjs-controls { display: block; }
+.vjs-controls.showYTBar { display: none !important; }
+
 /* Text Track Styles */
 /* Overall track holder for both captions and subtitles */
 .video-js .vjs-text-track-display { text-align: center; position: absolute; bottom: 4em; left: 1em; right: 1em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
