--- a/design/video-js.css
+++ b/design/video-js.css
@@ -456,7 +456,7 @@ div.vjs-loading-spinner .ball8 { opacity: 1.00; position:absolute; left: 6px; to
 .vjs-default-skin .vjs-menu-button div { background: url('video-js.png') 0px -75px no-repeat; width: 16px; height: 16px; margin: 0.2em auto 0; padding: 0; }
 
 /* Button Pop-up Menu */
-.vjs-default-skin .vjs-menu-button ul {
+.vjs-default-skin .vjs-menu {
   display: none; /* Start hidden. Hover will show. */
   opacity: 0.8;
   padding: 0; margin: 0;
@@ -469,15 +469,15 @@ div.vjs-loading-spinner .ball8 { opacity: 1.00; position:absolute; left: 6px; to
   overflow: auto;
 }
 
-.vjs-default-skin .vjs-menu-button:focus ul,
-.vjs-default-skin .vjs-menu-button:hover ul { display: block; list-style: none; }
-.vjs-default-skin .vjs-menu-button ul li { list-style: none; margin: 0; padding: 0.3em 0 0.3em 20px; line-height: 1.4em; font-size: 1.2em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-align: left; }
-.vjs-default-skin .vjs-menu-button ul li.vjs-selected { text-decoration: underline; background: url('video-js.png') -125px -50px no-repeat; }
-.vjs-default-skin .vjs-menu-button ul li:focus,
-.vjs-default-skin .vjs-menu-button ul li:hover,
-.vjs-default-skin .vjs-menu-button ul li.vjs-selected:focus,
-.vjs-default-skin .vjs-menu-button ul li.vjs-selected:hover { background-color: #ccc; color: #111; outline: 0; }
-.vjs-default-skin .vjs-menu-button ul li.vjs-menu-title {
+.vjs-default-skin .vjs-menu-button:focus .vjs-menu,
+.vjs-default-skin .vjs-menu-button:hover .vjs-menu { display: block; list-style: none; }
+.vjs-default-skin .vjs-menu-item { list-style: none; margin: 0; padding: 0.3em 0 0.3em 20px; line-height: 1.4em; font-size: 1.2em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-align: left; }
+.vjs-default-skin .vjs-menu-item.vjs-selected { text-decoration: underline; background: url('video-js.png') -125px -40px no-repeat; }
+.vjs-default-skin .vjs-menu-item:focus,
+.vjs-default-skin .vjs-menu-item:hover,
+.vjs-default-skin .vjs-menu-item.vjs-selected:focus,
+.vjs-default-skin .vjs-menu-item.vjs-selected:hover { background-color: #ccc; color: #111; outline: 0; }
+.vjs-default-skin .vjs-menu-title {
   text-align: center; text-transform: uppercase; font-size: 1em; line-height: 2em; padding: 0; margin: 0 0 0.3em 0;
 
   color: #fff; font-weight: bold;
