Import skins to main stylesheet

--- a/src/css/video-js.css
+++ b/src/css/video-js.css
@@ -13,6 +13,15 @@ REQUIRED STYLES (be careful overriding)
    ** If you want to add some kind of border/padding (e.g. a frame), or special positioning, use another containing element.
    Otherwise you risk messing up control positioning and full window mode. **
 */
+
+/*
+* Import Skins	
+*/
+	@import(skins/darkfunk-skin.css);
+/*
+* End Import
+*/
+
 .video-js {
   background-color: #000; position: relative; padding: 0;
 
