Center big play button
Was this the intended design choice?

--- a/src/css/video-js.css
+++ b/src/css/video-js.css
@@ -476,11 +476,11 @@ so you can upgrade to newer versions easier. You can remove all these styles by 
   display: block;
   z-index: 2;
   position: absolute;
-  top: 2em;
-  left: 2em;
+  top: 50%;
+  left: 50%;
   width: 12.0em;
   height: 8.0em;
-  margin: 0;
+  margin: -4em 0 0 -6em;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
