fix issue 518: .vjs-loading-spinner: {display:inline-block}

--- a/src/css/video-js.css
+++ b/src/css/video-js.css
@@ -552,7 +552,7 @@ so you can upgrade to newer versions easier. You can remove all these styles by 
 /* Loading Spinner
 ---------------------------------------------------------*/
 .vjs-loading-spinner {
-  display: none;
+  display:inline-block;
   position: absolute;
   top: 50%;
   left: 50%;
