fix issue 537:\n added CSS to make .vjs-poster not be display:none on play

--- a/src/css/video-js.css
+++ b/src/css/video-js.css
@@ -81,6 +81,11 @@ body.vjs-full-window {
   position: relative;
   width: 100%;
 }
+
+audio + div + .vjs-poster{
+  display:block !important;
+}
+
 .vjs-poster img {
   display: block;
   margin: 0 auto;
