--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -303,6 +303,7 @@ fonts to show/hide properly.
   top: 0;
   left: 0;
   height: 0.5em;
+  width: 100%;
 
   background: @slider-bar-color
     url(@slider-bar-pattern)
@@ -311,6 +312,10 @@ fonts to show/hide properly.
 .vjs-default-skin .vjs-volume-bar .vjs-volume-handle {
   width: 0.5em;
   height: 0.5em;
+  /* Assumes volume starts at 1.0. If you change the size of the
+     handle relative to the volume bar, you'll need to update this value
+     too. */
+  left: 90%;
 }
 
 .vjs-default-skin .vjs-volume-handle:before {
