--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -583,6 +583,20 @@ easily in the skin designer. http://designer.videojs.com/
   width: 100%;
 }
 
+.vjs-error-display div {
+  position: absolute;
+
+  font-size: 1.4em;
+  text-align: center;
+  bottom: 1em;
+  right: 1em;
+  left: 1em;
+}
+
+.vjs-error-display a, .vjs-error-display a:visited {
+  color: #F4A460;
+}
+
 /* Loading Spinner
 --------------------------------------------------------------------------------
 */
