Fixed the error display to hide by default

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -556,7 +556,12 @@ easily in the skin designer. http://designer.videojs.com/
 --------------------------------------------------------------------------------
 */
 
+.vjs-error-display {
+  display: none;
+}
+
 .vjs-error .vjs-error-display {
+  display: block;
   position: absolute;
   left: 0;
   top: 0;
