Addressed comments in #1191 Now clearing errors on loadstart events. Added some default error messages.

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -575,6 +575,7 @@ easily in the skin designer. http://designer.videojs.com/
   content: 'X';
   font-family: Arial;
   font-size: 4em;
+  color: #666666;
   /* In order to center the play icon vertically we need to set the line height
      to the same as the button height */
   line-height: 1;
