--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -396,7 +396,7 @@ fonts to show/hide properly.
 
 /* Progress Bars */
 .vjs-default-skin .vjs-progress-holder .vjs-play-progress,
-.vjs-default-skin .vjs-progress-holder .vjs-load-progress {
+.vjs-default-skin .vjs-progress-holder .vjs-load-progress div {
   position: absolute;
   display: block;
   height: 100%;
@@ -422,7 +422,7 @@ fonts to show/hide properly.
     url(@slider-bar-pattern)
     -50% 0 repeat;
 }
-.vjs-default-skin .vjs-load-progress {
+.vjs-default-skin .vjs-load-progress div {
   background: rgb(100, 100, 100) /* IE8- Fallback */;
   background: rgba(255, 255, 255, 0.4);
 }
