Correctly display played regions in progress-bar

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -395,7 +395,7 @@ fonts to show/hide properly.
 }
 
 /* Progress Bars */
-.vjs-default-skin .vjs-progress-holder .vjs-play-progress,
+.vjs-default-skin .vjs-progress-holder .vjs-play-progress div,
 .vjs-default-skin .vjs-progress-holder .vjs-load-progress div {
   position: absolute;
   display: block;
@@ -409,7 +409,7 @@ fonts to show/hide properly.
   top: 0;
 }
 
-.vjs-default-skin .vjs-play-progress {
+.vjs-default-skin .vjs-play-progress div {
   /*
     Using a data URI to create the white diagonal lines with a transparent
       background. Surprisingly works in IE8.
