--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -780,6 +780,10 @@ easily in the skin designer. http://designer.videojs.com/
   content: @chapters-icon;
 }
 
+.vjs-default-skin .vjs-chapters-button.vjs-menu-button .vjs-menu .vjs-menu-content {
+  width: 20em;
+}
+
 /* Replacement for focus outline */
 .vjs-default-skin .vjs-captions-button:focus .vjs-control-content:before,
 .vjs-default-skin .vjs-captions-button:hover .vjs-control-content:before {
