--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -77,6 +77,7 @@ The control icons are from a custom font. Each icon corresponds to a character
   font-family: 'VideoJS';
   src: url('font/vjs.eot');
   src: url('font/vjs.eot?#iefix') format('embedded-opentype'),
+  url('font/vjs.woff2') format('woff2'),
   url('font/vjs.woff') format('woff'),
   url('font/vjs.ttf') format('truetype'),
   url('font/vjs.svg#icomoon') format('svg');
