TextTrackDisplay bottom is 3em to be above ctrlbar

--- a/src/css/video-js.less
+++ b/src/css/video-js.less
@@ -967,7 +967,7 @@ body.vjs-full-window {
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
+  bottom: 3em;
   right: 0;
   pointer-events: none;
 }
