cleaned up and simplified big play btn

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,3 +1,9 @@
+$primary-text: #fff;
+$primary-bg: #000;
+
+
+// OLD SHIT
+
 // All of these variables can be overridden since they all use !default.
 // Reference: http://sass-lang.com/documentation/file.SASS_REFERENCE.html#variable_defaults_
 
