--- a/src/css/components/_icons.scss
+++ b/src/css/components/_icons.scss
@@ -25,3 +25,6 @@ $icon-captions: "\e81e";
 $icon-chapters: "\e891";
 $icon-share: "\e61a";
 $icon-cog: "\e8b1";
+$icon-circle: "\e692";
+$icon-circle-outline: "\e6f2";
+$icon-circle-inner-circle: "\e603";
