--- a/src/css/components/_slider.scss
+++ b/src/css/components/_slider.scss
@@ -14,7 +14,7 @@
 }
 
 .video-js .vjs-slider-handle:before {
-  content: $icon-square;
+  content: $icon-circle;
   font-family: VideoJS;
   font-size: 1em;
   line-height: 1;
