--- a/src/css/components/_live.scss
+++ b/src/css/components/_live.scss
@@ -3,11 +3,8 @@
 .video-js.vjs-live .vjs-progress-control {
   display: none;
 }
-.video-js.vjs-live .vjs-live-display {
-  display: block;
-}
 
-.video-js .vjs-live-display {
+.video-js .vjs-live-controls {
   display: none;
   font-size: 1em;
   line-height: 3em;
