--- a/src/css/components/_control.scss
+++ b/src/css/components/_control.scss
@@ -1,12 +1,13 @@
 .video-js .vjs-control {
   outline: none;
   position: relative;
-  float: left;
   text-align: center;
   margin: 0;
   padding: 0;
   height: 3.0em;
   width: 4em;
+  @include flex(none);
+  @include order(3);
 }
 
 .video-js .vjs-control:before {
@@ -19,7 +20,6 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
 }
 
 /* Replacement for focus outline */
