--- a/src/css/components/_time.scss
+++ b/src/css/components/_time.scss
@@ -2,6 +2,7 @@
   font-size: 1em;
   /* Align vertically by making the line height the same as the control bar *///
   line-height: 3em;
+  display: none;
 }
 .video-js .vjs-current-time { float: left; }
 .video-js .vjs-duration { float: left; }
